# toy-vim

./: .gitignore  CMakeLists.txt  nob.c
include/: buffer.h  main.h  modes.h  utils.h
src/: buffer.c  main.c  modes.c  utils.c
